# hanzi-ruby-lens

./: .dockerignore  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
docker/: Dockerfile  docker-compose.build.yml  docker-compose.test.yml  entrypoint.cmd
scripts/: build-secrets.mjs  check-docker.js  docker-build.ps1  docker-test.ps1  generate-icons.js  generate-icons.mjs
specs/001-dev-build-pipeline/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ruby-text-display/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ui-polish-theme-toggle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-reading-experience-refinements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-frameless-window/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-pinyin-toggle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-hook-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-text-scaling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-color-palettes/: data-model.md  plan.md  spec.md  (+3 more)
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  domain.rs  error.rs  lib.rs  main.rs  processing.rs  state.rs  sync.rs
(+349 files in other folders)
