[package]
name = "hanzi-ruby-lens"
version = "0.1.0"
description = "Chinese reading app with pinyin ruby annotations"
edition = "2021"
build = "build.rs"

[lib]
name = "hanzi_ruby_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "2"
jieba-rs = { version = "0.8", features = ["default-dict"] }
chinese_dictionary = "2.1"
pinyin = { version = "0.11", features = ["heteronym"] }
chrono = "0.4"
machine-uid = "0.5"
aes-gcm = "0.10"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
